--- a/mslemon/static/css/mainscreen.css
+++ b/mslemon/static/css/mainscreen.css
@@ -7965,7 +7965,6 @@ li.top-bar-button {
 .action-button {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
-  color: #d9d4cb;
   display: inline-block;
   cursor: pointer;
   -webkit-border-radius: 5px;
@@ -7984,15 +7983,16 @@ li.top-bar-button {
   -moz-box-shadow: #988b73 0 1px 0 inset;
   box-shadow: #988b73 0 1px 0 inset;
   border: 1px solid #413b30;
+  color: #d9d4cb;
   text-shadow: #211e18 0 -1px 0;
   font-weight: bold;
   font-family: "Droid Sans Bold";
 }
-/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .action-button:hover {
   text-decoration: none;
 }
-/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .action-button:hover {
   background-color: #413b30;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5f5646), color-stop(100%, #413b30));
@@ -8001,13 +8001,13 @@ li.top-bar-button {
   background: -o-linear-gradient(#5f5646, #413b30);
   background: linear-gradient(#5f5646, #413b30);
 }
-/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .action-button:active {
   -webkit-box-shadow: #39332a 0 1px 2px inset;
   -moz-box-shadow: #39332a 0 1px 2px inset;
   box-shadow: #39332a 0 1px 2px inset;
 }
-/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .action-button.disabled, .action-button[disabled] {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
@@ -8017,7 +8017,7 @@ li.top-bar-button {
   -moz-box-shadow: none;
   box-shadow: none;
 }
-/* line 76, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/_sassy-buttons.sass */
+/* line 74, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/_sassy-buttons.sass */
 .action-button::-moz-focus-inner {
   padding: 0 !important;
   margin: -1px !important;
@@ -8162,7 +8162,6 @@ li.top-bar-button {
 .ticket-update-ticket {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
-  color: #d9d4cb;
   display: inline-block;
   cursor: pointer;
   -webkit-border-radius: 5px;
@@ -8181,15 +8180,16 @@ li.top-bar-button {
   -moz-box-shadow: #988b73 0 1px 0 inset;
   box-shadow: #988b73 0 1px 0 inset;
   border: 1px solid #413b30;
+  color: #d9d4cb;
   text-shadow: #211e18 0 -1px 0;
   font-weight: bold;
   font-family: "Droid Sans Bold";
 }
-/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .ticket-update-ticket:hover {
   text-decoration: none;
 }
-/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .ticket-update-ticket:hover {
   background-color: #413b30;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5f5646), color-stop(100%, #413b30));
@@ -8198,13 +8198,13 @@ li.top-bar-button {
   background: -o-linear-gradient(#5f5646, #413b30);
   background: linear-gradient(#5f5646, #413b30);
 }
-/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .ticket-update-ticket:active {
   -webkit-box-shadow: #39332a 0 1px 2px inset;
   -moz-box-shadow: #39332a 0 1px 2px inset;
   box-shadow: #39332a 0 1px 2px inset;
 }
-/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .ticket-update-ticket.disabled, .ticket-update-ticket[disabled] {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
@@ -8214,7 +8214,7 @@ li.top-bar-button {
   -moz-box-shadow: none;
   box-shadow: none;
 }
-/* line 76, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/_sassy-buttons.sass */
+/* line 74, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/_sassy-buttons.sass */
 .ticket-update-ticket::-moz-focus-inner {
   padding: 0 !important;
   margin: -1px !important;
@@ -8308,7 +8308,6 @@ li.top-bar-button {
 .phonecall-update-phonecall {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
-  color: #d9d4cb;
   display: inline-block;
   cursor: pointer;
   -webkit-border-radius: 5px;
@@ -8327,15 +8326,16 @@ li.top-bar-button {
   -moz-box-shadow: #988b73 0 1px 0 inset;
   box-shadow: #988b73 0 1px 0 inset;
   border: 1px solid #413b30;
+  color: #d9d4cb;
   text-shadow: #211e18 0 -1px 0;
   font-weight: bold;
   font-family: "Droid Sans Bold";
 }
-/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-phonecall:hover {
   text-decoration: none;
 }
-/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-phonecall:hover {
   background-color: #413b30;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5f5646), color-stop(100%, #413b30));
@@ -8344,13 +8344,13 @@ li.top-bar-button {
   background: -o-linear-gradient(#5f5646, #413b30);
   background: linear-gradient(#5f5646, #413b30);
 }
-/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-phonecall:active {
   -webkit-box-shadow: #39332a 0 1px 2px inset;
   -moz-box-shadow: #39332a 0 1px 2px inset;
   box-shadow: #39332a 0 1px 2px inset;
 }
-/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-phonecall.disabled, .phonecall-update-phonecall[disabled] {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
@@ -8360,7 +8360,7 @@ li.top-bar-button {
   -moz-box-shadow: none;
   box-shadow: none;
 }
-/* line 76, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/_sassy-buttons.sass */
+/* line 74, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/_sassy-buttons.sass */
 .phonecall-update-phonecall::-moz-focus-inner {
   padding: 0 !important;
   margin: -1px !important;
@@ -8410,7 +8410,6 @@ li.top-bar-button {
 .phonecall-update-ticket {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
-  color: #d9d4cb;
   display: inline-block;
   cursor: pointer;
   -webkit-border-radius: 5px;
@@ -8429,15 +8428,16 @@ li.top-bar-button {
   -moz-box-shadow: #988b73 0 1px 0 inset;
   box-shadow: #988b73 0 1px 0 inset;
   border: 1px solid #413b30;
+  color: #d9d4cb;
   text-shadow: #211e18 0 -1px 0;
   font-weight: bold;
   font-family: "Droid Sans Bold";
 }
-/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-ticket:hover {
   text-decoration: none;
 }
-/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-ticket:hover {
   background-color: #413b30;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5f5646), color-stop(100%, #413b30));
@@ -8446,13 +8446,13 @@ li.top-bar-button {
   background: -o-linear-gradient(#5f5646, #413b30);
   background: linear-gradient(#5f5646, #413b30);
 }
-/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-ticket:active {
   -webkit-box-shadow: #39332a 0 1px 2px inset;
   -moz-box-shadow: #39332a 0 1px 2px inset;
   box-shadow: #39332a 0 1px 2px inset;
 }
-/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-ticket.disabled, .phonecall-update-ticket[disabled] {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
@@ -8462,7 +8462,7 @@ li.top-bar-button {
   -moz-box-shadow: none;
   box-shadow: none;
 }
-/* line 76, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/_sassy-buttons.sass */
+/* line 74, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/_sassy-buttons.sass */
 .phonecall-update-ticket::-moz-focus-inner {
   padding: 0 !important;
   margin: -1px !important;
@@ -8523,7 +8523,6 @@ li.top-bar-button {
 .phonecall-update-phonecall {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
-  color: #d9d4cb;
   display: inline-block;
   cursor: pointer;
   -webkit-border-radius: 5px;
@@ -8542,15 +8541,16 @@ li.top-bar-button {
   -moz-box-shadow: #988b73 0 1px 0 inset;
   box-shadow: #988b73 0 1px 0 inset;
   border: 1px solid #413b30;
+  color: #d9d4cb;
   text-shadow: #211e18 0 -1px 0;
   font-weight: bold;
   font-family: "Droid Sans Bold";
 }
-/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-phonecall:hover {
   text-decoration: none;
 }
-/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-phonecall:hover {
   background-color: #413b30;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5f5646), color-stop(100%, #413b30));
@@ -8559,13 +8559,13 @@ li.top-bar-button {
   background: -o-linear-gradient(#5f5646, #413b30);
   background: linear-gradient(#5f5646, #413b30);
 }
-/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-phonecall:active {
   -webkit-box-shadow: #39332a 0 1px 2px inset;
   -moz-box-shadow: #39332a 0 1px 2px inset;
   box-shadow: #39332a 0 1px 2px inset;
 }
-/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-phonecall.disabled, .phonecall-update-phonecall[disabled] {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
@@ -8575,7 +8575,7 @@ li.top-bar-button {
   -moz-box-shadow: none;
   box-shadow: none;
 }
-/* line 76, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/_sassy-buttons.sass */
+/* line 74, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/_sassy-buttons.sass */
 .phonecall-update-phonecall::-moz-focus-inner {
   padding: 0 !important;
   margin: -1px !important;
@@ -8625,7 +8625,6 @@ li.top-bar-button {
 .phonecall-update-ticket {
   font-size: 0.7em;
   padding: 0.3em 1.5em;
-  color: #d9d4cb;
   display: inline-block;
   cursor: pointer;
   -webkit-border-radius: 5px;
@@ -8644,15 +8643,16 @@ li.top-bar-button {
   -moz-box-shadow: #988b73 0 1px 0 inset;
   box-shadow: #988b73 0 1px 0 inset;
   border: 1px solid #413b30;
+  color: #d9d4cb;
   text-shadow: #211e18 0 -1px 0;
   font-weight: bold;
   font-family: "Droid Sans Bold";
 }
-/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 15, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-ticket:hover {
   text-decoration: none;
 }
-/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 36, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-ticket:hover {
   background-color: #413b30;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5f5646), color-stop(100%, #413b30));
@@ -8661,13 +8661,13 @@ li.top-bar-button {
   background: -o-linear-gradient(#5f5646, #413b30);
   background: linear-gradient(#5f5646, #413b30);
 }
-/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 39, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-ticket:active {
   -webkit-box-shadow: #39332a 0 1px 2px inset;
   -moz-box-shadow: #39332a 0 1px 2px inset;
   box-shadow: #39332a 0 1px 2px inset;
 }
-/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
+/* line 6, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/sassy-buttons/_sassy-button-pseudo-states.sass */
 .phonecall-update-ticket.disabled, .phonecall-update-ticket[disabled] {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
@@ -8677,7 +8677,7 @@ li.top-bar-button {
   -moz-box-shadow: none;
   box-shadow: none;
 }
-/* line 76, ../../../../../local/gems/gems/sassy-buttons-0.2/stylesheets/_sassy-buttons.sass */
+/* line 74, ../../../../../local/gems/gems/sassy-buttons-0.2.6/stylesheets/_sassy-buttons.sass */
 .phonecall-update-ticket::-moz-focus-inner {
   padding: 0 !important;
   margin: -1px !important;
